@@ -520,7 +520,7 @@ hostname="ns.genfic.com"
   </section>
 
   <section>
-    <title>Virtualization using Ganeti and KVM</title>
+    <title>Virtualization using KVM</title>
 
     <para>When possible, we will use virtualization. As virtualization
     platform, we will choose KVM as it offers many interesting features (both
@@ -672,385 +672,6 @@ hostname="ns.genfic.com"
         Need a web serving cluster? Set up on, replicate and boot. Need a few
         more during high load? Replicate and boot a few more. It becomes just
         that easy.</para>
-      </section>
-    </section>
-
-    <section>
-      <title>Ganeti and KVM</title>
-
-      <para>In this reference architecture, we will be using KVM as the
-      hypervisor software, and Ganeti as the management software that allows
-      us to manage the instances running on multiple systems. High-level, we
-      will be using Ganeti as described in the next figure.</para>
-
-      <figure>
-        <title>General Ganeti architecture</title>
-
-        <mediaobject>
-          <imageobject>
-            <imagedata fileref="images/02-ganeti.png"/>
-          </imageobject>
-        </mediaobject>
-      </figure>
-
-      <para>Within Ganeti, we will define a cluster that has a number of
-      nodes. Per cluster, we will keep the number of nodes manageble (although
-      the figure shows just two nodes, we aim for a cluster of about 12 nodes
-      each). Within the cluster, one or more instances can be defined as being
-      "highly available", which means that they will use DRBD storage
-      synchronisation towards a second node. In case of failure, those
-      instances can then be restarted on this secundary system.</para>
-
-      <figure>
-        <title>Fail over of high available instance</title>
-
-        <mediaobject>
-          <imageobject>
-            <imagedata fileref="images/02-ganeti2.png"/>
-          </imageobject>
-        </mediaobject>
-      </figure>
-
-      <para>Instances that are not defined as highly available (like "Instance
-      1" in the drawings) cannot be easily restarted on a secundary system.
-      Their data files will need to be restored from backup before they can be
-      rebooted.</para>
-
-      <section>
-        <title>All the virtualization advantages</title>
-
-        <para>The use of Ganeti and KVM offers us with all the virtualization
-        advantages mentioned before...</para>
-
-        <itemizedlist>
-          <listitem>
-            <para>By using DRBD (which is a network-based disk replication
-            feature of Linux) we can offer high available hosts which are
-            capable of quickly starting up guests if the primary system
-            fails.</para>
-          </listitem>
-
-          <listitem>
-            <para>Because we will use LVM with DRBD, we can support
-            snapshotting to simplify backup and restore routines, or even
-            change management activities that have a higher risk associated
-            with them.</para>
-          </listitem>
-
-          <listitem>
-            <para>Ganeti offers cluster rebalancing, making it easier to
-            optimize resource consumption across the cluster (Ganeti calls a
-            combination of nodes, which run a given set of guests, a
-            cluster).</para>
-          </listitem>
-
-          <listitem>
-            <para>With the help of some simple scripts, Ganeti allows us to
-            quickly add more instances, using other images as master.</para>
-          </listitem>
-        </itemizedlist>
-      </section>
-
-      <section>
-        <title>Hypervisor kernel configuration</title>
-
-        <para>A hypervisor<indexterm>
-            <primary>hypervisor</primary>
-          </indexterm> is the general term given to the host operating system
-        that offers virtualization services, so in effect is running the
-        virtual guests as processes (or groups of processes). In case of
-        KVM<indexterm>
-            <primary>KVM</primary>
-          </indexterm>, this means that the Linux kernel will be configured
-        with KVM enabled (and with the proper virtualization improvements on
-        various drivers) as well as userland utilities to support KVM
-        guests.</para>
-
-        <para>Below you can find a subset of kernel configuration settings
-        that can be used as a base for the configuration:</para>
-
-        <programlisting># <command>zgrep -E '(KVM|VIRT)' /proc/config.gz</command>
-# CONFIG_PARAVIRT_GUEST is not set
-CONFIG_VIRT_TO_BUS=y
-CONFIG_VIRTIO_BLK=m
-CONFIG_VIRTIO_NET=m
-# CONFIG_VIRTIO_CONSOLE is not set
-# CONFIG_HW_RANDOM_VIRTIO is not set
-# CONFIG_FB_VIRTUAL is not set
-# CONFIG_SND_VIRTUOSO is not set
-CONFIG_VIRTIO=m
-CONFIG_VIRTIO_RING=m
-# CONFIG_VIRTIO_PCI is not set
-CONFIG_VIRTIO_BALLOON=m
-CONFIG_VIRT_DRIVERS=y
-# CONFIG_DEBUG_VIRTUAL is not set
-CONFIG_GRKERNSEC_HARDENED_VIRTUALIZATION=y
-CONFIG_HAVE_KVM=y
-CONFIG_HAVE_KVM_IRQCHIP=y
-CONFIG_HAVE_KVM_EVENTFD=y
-CONFIG_KVM_APIC_ARCHITECTURE=y
-CONFIG_KVM_MMIO=y
-CONFIG_KVM_ASYNC_PF=y
-CONFIG_VIRTUALIZATION=y
-CONFIG_KVM=m
-CONFIG_KVM_INTEL=m
-# CONFIG_KVM_AMD is not set</programlisting>
-
-        <para>Make sure that your hardware systems support hardware-assisted
-        virtualization. For Intel processors, this means that vmx must be
-        available; on AMD processors, this is svm:</para>
-
-        <programlisting># <command>egrep '(vmx|svm)' /proc/cpuinfo | head -1</command>
-flags           : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat \
-                  pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx \
-                  rdtscp lm constant_tsc arch_perfmon pebs bts rep_good nopl \
-                  xtopology nonstop_tsc aperfmperf pni dtes64 monitor ds_cpl <emphasis>vmx</emphasis> \
-                  est tm2 ssse3 cx16 xtpr pdcm sse4_1 sse4_2 popcnt lahf_lm ida \
-                  arat dts tpr_shadow vnmi flexpriority ept vpid</programlisting>
-
-        <para>Because we are aiming for a hypervisor kernel, it is best to
-        remove all drivers not needed by the host. I am not directly opposed
-        to using kernel modules versus a monolithic kernel, but if the
-        configuration allows it, my preference goes to monolithic builds. This
-        also has the advantage that the initramfs does not need to take care
-        of kernel module loading.</para>
-      </section>
-
-      <section>
-        <title>Installing KVM Utilities</title>
-
-        <para>To build up the hypervisor, you first need to install
-        qemu-kvm<indexterm>
-            <primary>qemu-kvm</primary>
-          </indexterm>. This is the base platform under which the guests will
-        run and supports all possible features you need in a virtualized
-        environment.</para>
-
-        <programlisting># <command>emerge qemu-kvm</command></programlisting>
-
-        <para>The package listens to a lot of USE flags. Many of those are
-        however to enable support for other architectures (as QEMU is a
-        software virtualization platform which you can use even without
-        hardware virtualization assistance). My advise is to at least enable
-        aoi (Asynchronous I/O support), sasl (Simple Authentication and
-        Security Layer support), threads, vde (Virtual Distributed Ethernet
-        support) and vhost-net.</para>
-
-        <para>The qemu-kvm package already provides command-line utilities
-        that you can use to create image files, launch guests, set up
-        networking etc. However, these commands are quite complex and,
-        especially for distributed environments, difficult to manage...</para>
-
-        <programlisting># <command>qemu-system-x86_64 --enable-kvm -gdb tcp::1237 -vnc 127.0.0.1:3 \
-     -net nic,model=virtio,macaddr=00:11:22:33:44:b1,vlan=0 \
-     -net vde,vlan=0 -drive file=/srv/virt/gentoo/test.img,if=virtio,boot=on \
-     -usb -usbdevice tablet -smp 4 -cpu kvm64 -k nl-be -m 1536</command></programlisting>
-      </section>
-
-      <section>
-        <title>Installing ganeti</title>
-
-        <para>The installation of ganeti is quite simple: install
-        <package>ganeti</package> and <package>ganeti-htools</package>. If you
-        are planning on providing a high-available virtualization platform,
-        install drbd as well.</para>
-
-        <programlisting># <command>emerge ganeti ganeti-htools drbd</command></programlisting>
-      </section>
-    </section>
-
-    <section>
-      <title>Using Ganeti</title>
-
-      <section>
-        <title>Architectural information</title>
-
-        <para>There are a few things you need to know before starting off with
-        Ganeti, especially in light of architecturing its use.</para>
-
-        <itemizedlist>
-          <listitem>
-            <para>Ganeti uses SSH and specific TCP (over SSL) connections. The
-            use of SSH here might be something worth knowing, since it is used
-            to support remote root activities on the nodes. You might want to
-            take additional precautions to protect abuse of remote root
-            logons. In the future, I will be providing a SELinux user specific
-            for ganeti, and have remote root logons automatically assigned to
-            this user, so it remains confined. There is also a <link
-            xlink:href="https://code.google.com/p/ganeti/issues/detail?id=197">patch</link>
-            circulating on the Internet that would support non-root
-            logons.</para>
-          </listitem>
-
-          <listitem>
-            <para>The use of DRBD (for replication) within Ganeti is best kept
-            for synchronisation within a single network segment (so "local"
-            high availability). It is not the intention to use this across
-            larger distances. DRBD by itself can still be used for that, but
-            not in combination with booting the guest images. This is
-            partially because the guest images will expect the same network
-            environment when they boot up as previous.</para>
-
-            <para>In our reference architecture, we will be using application
-            fail-over when large-distance high availability is
-            necessary.</para>
-          </listitem>
-        </itemizedlist>
-
-        <para>A ganeti node will be managed through the regular management
-        channels like OpenSSH and Puppet, just as described earlier. In the
-        architecture, we make a bit of differentiation on the interfaces
-        through which traffic will flow</para>
-
-        <itemizedlist>
-          <listitem>
-            <para><emphasis>SERVICE-LAN</emphasis> is the operational
-            (business) service activities, both for the instances themselves
-            (which will be aggregated through a bridge interface) as well as
-            the ganeti node.</para>
-          </listitem>
-
-          <listitem>
-            <para><emphasis>MGMT-LAN</emphasis> is for management activities
-            (such as SSH access, but also (re)configuration events through
-            Puppet and the like).</para>
-          </listitem>
-
-          <listitem>
-            <para><emphasis>DRBD-SYNC</emphasis> is one of the back-end
-            specific data flows (the back-end network will be used for higher
-            throughput, QoS'ed data flows, including backup/restore and disk
-            synchronization).</para>
-          </listitem>
-        </itemizedlist>
-
-        <para>By properly segregating the service flows (which are SLA bound)
-        from the administrative ones (which should be limited to known
-        changes) and back-end (which are expected to be more heavy but better
-        manageable, perhaps using QoS) we should be able to provide good
-        monitoring on the used services, improve management and bandwidth
-        usage and perhaps even improve security without losing or hindering
-        administrators and engineers in their day-to-day tasks.</para>
-      </section>
-
-      <section>
-        <title>Preparing DRBD</title>
-
-        <para>Because high available virtual guests will be used in this
-        reference architecture, we will be configuring DRBD. </para>
-
-        <note>
-          <para>When talking about high availability, I mean to provide a good
-          service availability in case of smaller calamities. If your entire
-          data center or computer room is broken, other measures might need to
-          be taken which I prefer to put under the "disaster recovery" flag.
-          Later, when I talk about the various setups, I will cover disaster
-          recovery as well.</para>
-        </note>
-
-        <para>DRBD<indexterm>
-            <primary>DRBD</primary>
-          </indexterm> uses the network to synchronise block devices. It is
-        adviseable to have a different network for this back-end communication
-        versus the network used for front-end (business) activity. Logically
-        speaking, we will have 3 network channels: one for the data flow of
-        the services, one for the management activities and one for the
-        back-end synchronisation. You can have all these channels on a single
-        Ethernet if you want, but logically speaking, they are
-        separate.</para>
-
-        <para>In our architecture, we will be putting DRBD on top of LVM, and
-        then use LVM again based on DRBD devices. This stacking of
-        technologies has the downside of some complexity (and perhaps even
-        performance impact) but has advantages that, in my opinion, win
-        against the downsides (a few specific use cases
-        notwithstanding).</para>
-
-        <itemizedlist>
-          <listitem>
-            <para>Because DRBD works on top of LVM, you can expand the size of
-            the underlying LVM volume groups and logical volumes. DRBD
-            supports on-line resizing.</para>
-          </listitem>
-
-          <listitem>
-            <para>Because DRBD works on top of LVM, you can use LVM snapshot
-            technology to provide better resilience against failures.
-            Especially during synchronisation, if the source fails and the
-            target is in an inconsistent state, you will be glad to have a
-            snapshot (on the receiving side) to work from.</para>
-          </listitem>
-
-          <listitem>
-            <para>Because LVM works on top of DRBD, you have the advantages of
-            the volume manager for your image management functions while still
-            benefiting from the high availability mode that DRBD
-            offers.</para>
-          </listitem>
-        </itemizedlist>
-
-        <para>In the near future, I might include clustering file systems as
-        well. However, for now, I am less convinced about the maturity of
-        these file systems whereas I have read many good reviews on DRBD in
-        production scenarios.</para>
-
-        <para>To properly have DRBD for Ganeti, it is mandatory to run it with
-        the following two options. The listing shows them as kernel
-        parameters, but you can use them as module parameters as well (in
-        /etc/conf.d/modules):</para>
-
-        <programlisting>drbd.minor_count=255 drbd.usermode_helper=/bin/true</programlisting>
-
-        <para>We also need to protect the DRBD devices from being scanned by
-        LVM. To accomplish this, edit /etc/lvm/lvm.conf as follows:</para>
-
-        <programlisting>filter = [ "r|/dev/nbd.*|", "a/.*/"<emphasis>, "r|/dev/drbd[0-9]+|"</emphasis> ]</programlisting>
-
-        <para>Finally edit /etc/drbd.conf and skip all existing resource
-        configurations. Ganeti will configure DRBD itself when needed.</para>
-
-        <programlisting># <command>cat /etc/drbd.conf</command>
-<emphasis>skip</emphasis> resource r0 {
-  ...
-}</programlisting>
-      </section>
-
-      <section>
-        <title>Preparing Ganeti</title>
-
-        <para>Make sure that the hostname setting in
-        <filename>/etc/conf.d/hostname</filename> provides a fully qualified
-        hostname. Ganeti will otherwise refuse to function properly (and we'll
-        also need this for Puppet later).</para>
-
-        <programlisting># <command>cat /etc/conf.d/hostname</command>
-## Ganeti Cluster 01 Node 01 in production hosts.genfic.com network
-hostname="gc01n01.hosts.genfic.com"</programlisting>
-
-        <para>Next prepare the LVM volume group you will use to host the guest
-        images on.</para>
-
-        <programlisting># <command>pvcreate /dev/md2</command>
-# <command>vgcreate vg_ganeti /dev/md2</command></programlisting>
-      </section>
-
-      <section>
-        <title>Creating the first cluster</title>
-
-        <para>Now we can initialize the first cluster (and node).</para>
-
-        <programlisting># <command>gnt-cluster init --master-netdev=br0 -g vg_ganeti -s &lt;node drbd_ip&gt; \
-   --enabled-hypervisors=kvm -N link=br0 -B vcpus=2,memory=512 \
-   -H kvm:kernel_path=/srv/virt/vmlinuz gc01n01.virt.internal.genfic.com</command></programlisting>
-      </section>
-
-      <section>
-        <title>Expanding the cluster</title>
-
-        <para>When you have configured a second system, instead of
-        initializing a cluster, you use:</para>
-
-        <programlisting># <command>gnt-cluster add -s &lt;node drbd_ip&gt; &lt;node hostname&gt;</command></programlisting>
       </section>
     </section>
   </section>
